--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://deepnighttwo.com
+production_url : http://deepnighttwo.github.io
 #cdn_url : http://deepnighttwo.u.qiniudn.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
@@ -78,6 +78,7 @@ JB :
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
   #
+
   archive_path: /archive.html
   categories_path : /categories.html
   tags_path : /tags.html
