--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # For more see: https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink: /post/:title.html
 
-safe: false
+safe: true
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 auto: true
 paginate: 10
@@ -111,9 +111,10 @@ JB :
   # Set 'provider' to the analytics provider you want to use.
   # Set 'provider' to false to turn analytics off globally.
   #        
-  #analytics :
+  analytics :
+    provider : google
     google : 
-      tracking_id : 'UA-6843258-4'
+      tracking_id : 'UA-6843258-5'
   #  getclicky :
   #    site_id : 
   #  mixpanel :
