--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://deepnighttwo.github.io
+production_url : http://deepnighttwo.com
 #cdn_url : http://deepnighttwo.u.qiniudn.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
