--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ auto: true
 paginate: 10
 encoding: utf-8
 pygments: true
-markdown: redcarpet
+markdown: kramdown
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data", "tables"]
 
@@ -32,7 +32,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://deepnighttwo.com
+production_url : http://deepnighttwo.github.io
 #cdn_url : http://deepnighttwo.u.qiniudn.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
